# DuplicateFinder

./: CMakeLists.txt  DuplicateFinder.pro  delete_popup_window.cpp  delete_popup_window.h  delete_popup_window.ui  duplicate_finder.cpp  duplicate_finder.h  error_popup_window.cpp  error_popup_window.ui  find_duplicates.cpp  find_duplicates.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  popup_window.cpp  popup_window.h
popups/: error_popup_window.h  popup_window.ui
